affichage inventaire + prix arrondis

--- a/templates/user/inventory.html.twig
+++ b/templates/user/inventory.html.twig
@@ -15,38 +15,22 @@
                         <br>
                         <div id="drop1" style="width:55px;height:55px;margin-bottom: 14px;border: solid;">
                             {% if equipement.casque %}
-<<<<<<< HEAD
-                                <img id="arme{{ equipement.casque.id }}" class="item" style="width:50px;height:50px;margin-right: 10px" src="{{asset('sprites/armures/')}}{{equipement.casque.sprite}}" alt="sprite">
-=======
-                                <img id="armure{{ equipement.casque.id }}" class="item" style="width:50px;height:50px;margin-right: 10px" src="{{asset('sprites/armures/')}}{{equipement.casque.armure.sprite}}" alt="sprite" onclick="transferArmor(event,'{{ equipement.casque.armure.type }}', '{{ equipement.casque.id }}')">
->>>>>>> 5f4468972ceb6ceeed359f10c8a29078d103ff9f
+                                <img id="armure{{ equipement.casque.id }}" class="item" style="width:50px;height:50px;margin-right: 10px" src="{{asset('sprites/armures/')}}{{equipement.casque.sprite}}" alt="sprite">
                             {% endif %}
                         </div>
                         <div id="drop2" style="width:55px;height:55px;margin-bottom: 14px;border: solid;">
                             {% if equipement.plastron %}
-<<<<<<< HEAD
-                                <img id="arme{{ equipement.plastron.id }}" class="item" style="width:50px;height:50px;margin-right: 10px" src="{{asset('sprites/armures/')}}{{equipement.plastron.sprite}}" alt="sprite">
-=======
-                                <img id="armure{{ equipement.plastron.id }}" class="item" style="width:50px;height:50px;margin-right: 10px" src="{{asset('sprites/armures/')}}{{equipement.plastron.armure.sprite}}" alt="sprite" onclick="transferArmor(event,'{{ equipement.plastron.armure.type }}', '{{ equipement.plastron.id }}')">
->>>>>>> 5f4468972ceb6ceeed359f10c8a29078d103ff9f
+                                <img id="armure{{ equipement.plastron.id }}" class="item" style="width:50px;height:50px;margin-right: 10px" src="{{asset('sprites/armures/')}}{{equipement.plastron.sprite}}" alt="sprite">
                             {% endif %}
                         </div>
                         <div id="drop3" style="width:55px;height:55px;margin-bottom: 14px;border: solid;">
                             {% if equipement.jambieres %}
-<<<<<<< HEAD
-                                <img id="arme{{ equipement.jambieres.id }}" class="item" style="width:50px;height:50px;margin-right: 10px" src="{{asset('sprites/armures/')}}{{equipement.jambieres.sprite}}" alt="sprite">
-=======
-                                <img id="armure{{ equipement.jambieres.id }}" class="item" style="width:50px;height:50px;margin-right: 10px" src="{{asset('sprites/armures/')}}{{equipement.jambieres.armure.sprite}}" alt="sprite" onclick="transferArmor(event,'{{ equipement.jambieres.armure.type }}', '{{ equipement.jambieres.id }}')">
->>>>>>> 5f4468972ceb6ceeed359f10c8a29078d103ff9f
+                                <img id="armure{{ equipement.jambieres.id }}" class="item" style="width:50px;height:50px;margin-right: 10px" src="{{asset('sprites/armures/')}}{{equipement.jambieres.sprite}}" alt="sprite">
                             {% endif %}
                         </div>
                         <div id="drop4" style="width:55px;height:55px;margin-bottom: 14px;border: solid;">
                             {% if equipement.bottes %}
-<<<<<<< HEAD
-                                <img id="arme{{ equipement.bottes.id }}" class="item" style="width:50px;height:50px;margin-right: 10px" src="{{asset('sprites/armures/')}}{{equipement.bottes.sprite}}" alt="sprite">
-=======
-                                <img id="armure{{ equipement.bottes.id }}" class="item" style="width:50px;height:50px;margin-right: 10px" src="{{asset('sprites/armures/')}}{{equipement.bottes.armure.sprite}}" alt="sprite" onclick="transferArmor(event,'{{ equipement.bottes.armure.type }}', '{{ equipement.bottes.id }}')">
->>>>>>> 5f4468972ceb6ceeed359f10c8a29078d103ff9f
+                                <img id="armure{{ equipement.bottes.id }}" class="item" style="width:50px;height:50px;margin-right: 10px" src="{{asset('sprites/armures/')}}{{equipement.bottes.sprite}}" alt="sprite">
                             {% endif %}
                         </div>
                     </div>
@@ -56,20 +40,12 @@
                         <br>
                         <div id="drop5" style="width:55px;height:55px;margin-bottom: 14px;border: solid;">
                             {% if equipement.arme %}
-<<<<<<< HEAD
-                                <img id="arme{{ equipement.arme.id }}" class="item" style="width:50px;height:50px;margin-right: 10px" src="{{asset('sprites/armes/')}}{{equipement.arme.sprite}}" alt="sprite">
-=======
-                                <img id="arme{{ equipement.arme.id }}" class="item" style="width:50px;height:50px;margin-right: 10px" src="{{asset('sprites/armes/')}}{{equipement.arme.arme.sprite}}" alt="sprite" onclick="transferSword(event, '{{ equipement.arme.id }}')">
->>>>>>> 5f4468972ceb6ceeed359f10c8a29078d103ff9f
+                                <img id="arme{{ equipement.arme.id }}" class="item" style="width:50px;height:50px;margin-right: 10px" src="{{asset('sprites/armes/')}}{{equipement.arme.sprite}}" alt="sprite" onclick="transferSword(event, '{{ equipement.arme.id }}')">
                             {% endif %}
                         </div>
                         <div id="drop6" style="width:55px;height:55px;margin-bottom: 14px;border: solid;">
                             {% if equipement.potion %}
-<<<<<<< HEAD
-                                <img id="arme{{ equipement.potion.id }}" class="item" style="width:50px;height:50px;margin-right: 10px" src="{{asset('sprites/potions/')}}{{equipement.potion.sprite}}" alt="sprite">
-=======
-                                <img id="potion{{ equipement.potion.id }}" class="item" style="width:50px;height:50px;margin-right: 10px" src="{{asset('sprites/potions/')}}{{equipement.potion.potion.sprite}}" alt="sprite" onclick="transferPotion(event, '{{ equipement.potion.id }}')">
->>>>>>> 5f4468972ceb6ceeed359f10c8a29078d103ff9f
+                                <img id="potion{{ equipement.potion.id }}" class="item" style="width:50px;height:50px;margin-right: 10px" src="{{asset('sprites/potions/')}}{{equipement.potion.sprite}}" alt="sprite" onclick="transferPotion(event, '{{ equipement.potion.id }}')">
                             {% endif %}
                         </div>
                         <div id="div-to-refresh">
@@ -83,47 +59,42 @@
                 <div class="container-xs col-sm-1" style="background-color: #b8daff"></div>
                 <div class="container-xs col-sm-5" style="background-color: #ffd3b8;border-radius:10px;">
                     <br><h4 style="text-align: center">Sac à dos</h4>
-                    <div class="container-fluid" style="background-color: #ffd3b8;white-space: nowrap;overflow-x: scroll;overflow-y: hidden;border-radius: 10px;">
+                    <div id="sac" style="background-color: #ffd3b8;white-space: nowrap;overflow-x:hidden;overflow-y:scroll;border-radius: 10px;height: 225px;text-align: justify">
                         <br>
-                        <div id="sac">
                             {% if armes is not empty %}
-                                {% for arme in armes %}
-<<<<<<< HEAD
-                                    <img id="arme{{ arme.id }}" class="item" style="width:50px;height:50px;margin-right: 10px" src="{{asset('sprites/armes/')}}{{arme.sprite}}" alt="sprite" onclick="transferSword(event, '{{ arme.inventID }}')">
-=======
+                                {% for key, arme in armes %}
+                                    {% if key != 0 and key%6 == 0 %}
+                                        <br><br>
+                                    {% endif %}
                                     {% if equipement.arme and arme.inventID != equipement.arme.id %}
                                         <img id="arme{{ arme.inventID }}" class="item" style="width:50px;height:50px;margin-right: 10px" src="{{asset('sprites/armes/')}}{{arme.sprite}}" alt="sprite" onclick="transferSword(event, '{{ arme.inventID }}')">
                                     {% elseif not equipement.arme %}
                                         <img id="arme{{ arme.inventID }}" class="item" style="width:50px;height:50px;margin-right: 10px" src="{{asset('sprites/armes/')}}{{arme.sprite}}" alt="sprite" onclick="transferSword(event, '{{ arme.inventID }}')">
                                     {% endif %}
->>>>>>> 5f4468972ceb6ceeed359f10c8a29078d103ff9f
                                 {% endfor %}
+                                <br><br>
                             {% endif %}
-
                             {% if armures is not empty %}
-                                {% for armure in armures %}
-<<<<<<< HEAD
-                                    <img id="armure{{ armure.id }}" class="item" style="width:50px;height:50px;margin-right: 10px" src="{{asset('sprites/armures/')}}{{armure.sprite}}" alt="sprite" onclick="transferArmor(event, '{{ armure.nomType }}','{{ armure.inventID }}')">
-=======
+                                {% if key != 0 and key%6 == 0 %}
+                                    <br><br>
+                                {% endif %}
+                                {% for key, armure in armures %}
                                     <img id="armure{{ armure.inventID }}" class="item" style="width:50px;height:50px;margin-right: 10px" src="{{asset('sprites/armures/')}}{{armure.sprite}}" alt="sprite" onclick="transferArmor(event, '{{ armure.nomType }}','{{ armure.inventID }}')">
->>>>>>> 5f4468972ceb6ceeed359f10c8a29078d103ff9f
                                 {% endfor %}
+                                <br><br>
                             {% endif %}
-
                             {% if potions is not empty %}
-                                {% for potion in potions %}
-<<<<<<< HEAD
-                                    <img id="potion{{ potion.id }}" class="item" style="width:50px;height:50px;margin-right: 10px" src="{{asset('sprites/potions/')}}{{potion.sprite}}" alt="sprite" onclick="transferPotion(event, '{{ potion.inventID }}')" >
-=======
+                                {% for key, potion in potions %}
+                                    {% if key != 0 and key%6 == 0 %}
+                                        <br><br>
+                                    {% endif %}
                                     {% if equipement.potion and potion.inventID != equipement.potion.id %}
                                         <img id="potion{{ potion.inventID }}" class="item" style="width:50px;height:50px;margin-right: 10px" src="{{asset('sprites/potions/')}}{{potion.sprite}}" alt="sprite" onclick="transferPotion(event, '{{ potion.inventID }}')" >
                                     {% elseif not equipement.potion %}
                                         <img id="potion{{ potion.inventID }}" class="item" style="width:50px;height:50px;margin-right: 10px" src="{{asset('sprites/potions/')}}{{potion.sprite}}" alt="sprite" onclick="transferPotion(event, '{{ potion.inventID }}')" >
                                     {% endif %}
->>>>>>> 5f4468972ceb6ceeed359f10c8a29078d103ff9f
                                 {% endfor %}
                             {% endif %}
-                        </div>
                         <br>
                     </div>
                 </div>
@@ -134,27 +105,17 @@
     </div>
     <script>
         function transferSword(ev, inventaire) {
-<<<<<<< HEAD
-            if(document.getElementById("drop5").firstChild !== null){
-                document.getElementById("sac").appendChild(document.getElementById("drop5").firstChild);
-=======
             if(document.getElementById("drop5").firstElementChild !== null){
                 document.getElementById("sac").appendChild(document.getElementById("drop5").firstElementChild);
->>>>>>> 5f4468972ceb6ceeed359f10c8a29078d103ff9f
                 document.getElementById("drop5").replaceChild(document.getElementById(ev.target.id),document.getElementById("drop5").firstChild)
             } else {
                 document.getElementById("drop5").appendChild(document.getElementById(ev.target.id));
             }
-            window.location.replace("/inventaire/equipe/" + 1 + "/" + inventaire + "/");
+            window.location.replace("/inventaire/equipe/" + 1 + "/" + inventaire);
         }
         function transferPotion(ev, inventaire) {
-<<<<<<< HEAD
-            if(document.getElementById("drop6").firstChild !== null ){
-                document.getElementById("sac").appendChild(document.getElementById("drop6").firstChild);
-=======
             if(document.getElementById("drop6").firstElementChild !== null ){
                 document.getElementById("sac").appendChild(document.getElementById("drop6").firstElementChild);
->>>>>>> 5f4468972ceb6ceeed359f10c8a29078d103ff9f
                 document.getElementById("drop6").replaceChild(document.getElementById(ev.target.id),document.getElementById("drop6").firstChild)
             } else {
                 document.getElementById("drop6").appendChild(document.getElementById(ev.target.id));
@@ -164,44 +125,27 @@
         function transferArmor(ev, type, inventaire) {
             switch (type) {
                 case "Casque":
-<<<<<<< HEAD
-                    if(document.getElementById("drop1").firstChild !== null){
-                        document.getElementById("sac").appendChild(document.getElementById("drop1").firstChild);
-                        document.getElementById("drop1").replaceChild(document.getElementById(ev.target.id),document.getElementById("drop1").firstElementChild)
-=======
                     if(document.getElementById("drop1").firstElementChild !== null){
                         document.getElementById("sac").appendChild(document.getElementById("drop1").firstElementChild);
                         document.getElementById("drop1").replaceChild(document.getElementById(ev.target.id),document.getElementById("drop1").firstChild)
->>>>>>> 5f4468972ceb6ceeed359f10c8a29078d103ff9f
                     } else {
                         document.getElementById("drop1").appendChild(document.getElementById(ev.target.id));
                     }
                     window.location.replace("/inventaire/equipe/" + 2 + "/" + inventaire);
                     break;
                 case "Plastron":
-<<<<<<< HEAD
-                    if(document.getElementById("drop2").firstChild !== null){
-                        document.getElementById("sac").appendChild(document.getElementById("drop2").firstChild);
-=======
                     if(document.getElementById("drop2").firstElementChild !== null){
                         document.getElementById("sac").appendChild(document.getElementById("drop2").firstElementChild);
->>>>>>> 5f4468972ceb6ceeed359f10c8a29078d103ff9f
                         document.getElementById("drop2").replaceChild(document.getElementById(ev.target.id),document.getElementById("drop2").firstChild)
                     } else {
                         document.getElementById("drop2").appendChild(document.getElementById(ev.target.id));
                     }
                     window.location.replace("/inventaire/equipe/" + 3 + "/" + inventaire);
                     break;
-<<<<<<< HEAD
-                case 'Jambières':
-                    if(document.getElementById("drop3").firstChild !== null){
-                        document.getElementById("sac").appendChild(document.getElementById("drop3").firstChild);
-=======
                 case 'Jambieres':
                     if(document.getElementById("drop3").firstElementChild !== null){
                         console.log("coucou");
                         document.getElementById("sac").appendChild(document.getElementById("drop3").firstElementChild);
->>>>>>> 5f4468972ceb6ceeed359f10c8a29078d103ff9f
                         document.getElementById("drop3").replaceChild(document.getElementById(ev.target.id),document.getElementById("drop3").firstChild)
                     } else {
                         document.getElementById("drop3").appendChild(document.getElementById(ev.target.id));
@@ -209,13 +153,8 @@
                     window.location.replace("/inventaire/equipe/" + 4 + "/" + inventaire);
                     break;
                 case 'Chaussures':
-<<<<<<< HEAD
-                    if(document.getElementById("drop4").firstChild !== null){
-                        document.getElementById("sac").appendChild(document.getElementById("drop4").firstChild);
-=======
                     if(document.getElementById("drop4").firstElementChild !== null){
                         document.getElementById("sac").appendChild(document.getElementById("drop4").firstElementChild);
->>>>>>> 5f4468972ceb6ceeed359f10c8a29078d103ff9f
                         document.getElementById("drop4").replaceChild(document.getElementById(ev.target.id),document.getElementById("drop4").firstChild)
                     } else {
                         document.getElementById("drop4").appendChild(document.getElementById(ev.target.id));
