--- a/templates/user/shop.html.twig
+++ b/templates/user/shop.html.twig
@@ -15,7 +15,7 @@
                             <!-- Afficher tous les objets de User + bouton pour vendre qui envoie l'id de l'objet, son groupe et aussi l'id de l'inventaire -->
                             {% for key,group in inventory %}
                                 {% for item in group %}
-                                    <div style="height: 100px;width: 100px;margin-bottom: 40px">
+                                    <div style="height: 100px;width: 100px;margin-bottom: 40px;text-align: center">
                                         {%  if item.sprite is not empty %}
                                             <img class="img-fluid rounded"  style="width:50px;height:50px"  src="{{asset('sprites/')}}{{ key }}/{{item.sprite}}"  alt="image  de {{ item.nom }}" >
                                         {% endif %}<br>
