--- a/templates/user/shop.html.twig
+++ b/templates/user/shop.html.twig
@@ -11,23 +11,23 @@
                     <h4>Vendre des items :</h4><br>
                 </div>
                 <div class="container-xs col-sm-12">
-                    <div class="row" style="background-color: #ffd3b8;white-space: nowrap;overflow-x:hidden;overflow-y:scroll;border-radius: 10px;height: 225px;text-align: justify;">
-                        {% if inventory.armes is not empty or inventory.armures is not empty or inventory.potions is not empty %}
+                    {% if inventory.armes is not empty or inventory.armures is not empty or inventory.potions is not empty %}
+                        <div class="row" style="background-color: #ffd3b8;white-space: nowrap;overflow-x:hidden;overflow-y:scroll;border-radius: 10px;height: 225px;text-align: justify;">
                             {% for key,group in inventory %}
                                 {% for item in group %}
                                     <div style="height: 100px;width: 100px;margin-bottom: 40px;text-align: center">
                                         {%  if item.sprite is not empty %}
-                                            <img class="img-fluid rounded"  style="width:50px;height:50px"  src="{{asset('sprites/')}}{{ key }}/{{item.sprite}}"  alt="image  de {{ item.nom }}" >
+                                    <img class="img-fluid rounded"  style="width:50px;height:50px"  src="{{asset('sprites/')}}{{ key }}/{{item.sprite}}"  alt="image  de {{ item.nom }}" >
                                         {% endif %}<br>
                                         <a href="{{ path('shop.sell', {id: item.id, group: key, inventID: item.inventID} )}}" class="btn btn-warning">{{ item.prix - (item.prix*20/100) |round }} <img style="width:15px;height:13.5px;" src="{{asset('images/coin.png')}}" alt="coin"></a>
                                     </div>
                                 {% endfor %}
                             {% endfor %}
-                        {% else %}
-                            <div>Veuillez lancer le jeu une première fois pour acheter des objets et pouvoir les vendre</div>
-                        {% endif %}
-                        <br>
-                    </div>
+                            <br>
+                        </div>
+                    {% else %}
+                        <div style="text-align: center">Veuillez lancer le jeu une première fois pour acheter des objets et pouvoir les vendre</div><br>
+                    {% endif %}
                 </div>
             </div>
         </div>
