--- a/templates/user/inventory.html.twig
+++ b/templates/user/inventory.html.twig
@@ -13,7 +13,7 @@
         <br><br><br>
         <div class="container-xl" style="border-radius: 10px;border-style: solid">
             <br><h1 style="color:#78ade6">&nbsp;&nbsp;Votre Inventaire</h1><br><br>
-            {% if equipement is not empty %}
+            {% if equipement is not null %}
                     <div class="row" id="inventaire">
                     <img style="width:275px;height:275px" src="{{asset('sprites/personnage/personnage.png')}}" alt="image du personnage">
                     <div class="container-xs col-sm-1" style="background-color: #cbb8ff;border-radius: 10px 0 0 10px;">
