Plus de lien showEnnemi

--- a/templates/admin/layout.html.twig
+++ b/templates/admin/layout.html.twig
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>S3 web</title>
+    <title>Projet Tut</title>
     {% block stylesheets %}
         <link rel="stylesheet" href="{{ asset('assets/css/bootstrap.css') }}" >
     {% endblock %}
